hip_add_library

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -176,7 +176,7 @@ if (GMX_USE_HIP)
     include_directories(/opt/rocm/rocfft/include)
     if (NOT GMX_CLANG_CUDA)
        # cuda_add_library(libgromacs ${LIBGROMACS_SOURCES})
-         add_library(libgromacs ${LIBGROMACS_SOURCES})
+         hip_add_library(libgromacs ${LIBGROMACS_SOURCES})
          target_link_libraries(libgromacs PRIVATE ${hip_target} )
     else()
         add_library(libgromacs ${LIBGROMACS_SOURCES})
