real and assert fixed

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -176,12 +176,26 @@ if (GMX_USE_HIP)
     include_directories(/opt/rocm/rocfft/include)
     if (NOT GMX_CLANG_CUDA)
        # cuda_add_library(libgromacs ${LIBGROMACS_SOURCES})
-         hip_add_library(libgromacs ${LIBGROMACS_SOURCES})
-         target_link_libraries(libgromacs PRIVATE ${hip_target} )
+     find_package(HIP REQUIRED)
+
+     find_package(rocfft REQUIRED)
+     include(rocfft-config)
+foreach(hip_file ${LIBGROMACS_SOURCES})
+  if(${hip_file} MATCHES "\\.hip.cpp$" )
+    set_source_files_properties(${hip_file} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
+  endif()
+endforeach()
+         message(status "I'm here")
+         set(MY_HIPCC_OPTIONS)
+         set(MY_HCC_OPTIONS)
+         set(MY_NVCC_OPTIONS)
+
+         hip_add_library(libgromacs ${LIBGROMACS_SOURCES} HIPCC_OPTIONS ${MY_HIPCC_OPTIONS} HCC_OPTIONS ${MY_HCC_OPTIONS} NVCC_OPTIONS ${MY_NVCC_OPTIONS})
+     #    target_link_libraries(libgromacs PRIVATE ${hip_target} )
     else()
         add_library(libgromacs ${LIBGROMACS_SOURCES})
     endif()
-    target_link_libraries(libgromacs PRIVATE ${CUDA_CUFFT_LIBRARIES})
+    target_link_libraries(libgromacs PRIVATE ${rocfft_LIBRARY})
 else()
     add_library(libgromacs ${LIBGROMACS_SOURCES})
 endif()
