--- a/src/gromacs/ewald/CMakeLists.txt
+++ b/src/gromacs/ewald/CMakeLists.txt
@@ -36,6 +36,7 @@ file(GLOB EWALD_SOURCES *.cpp)
 set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${EWALD_SOURCES} PARENT_SCOPE)
 if (GMX_USE_HIP)
     file(GLOB EWALD_CUDA_SOURCES *.hip.cpp)
+    set_source_files_properties(${EWALD_CUDA_SOURCES} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
     gmx_add_libgromacs_sources(${EWALD_CUDA_SOURCES})
 endif()
 
