--- a/src/gromacs/mdlib/nbnxn_cuda/CMakeLists.txt
+++ b/src/gromacs/mdlib/nbnxn_cuda/CMakeLists.txt
@@ -32,7 +32,7 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-if(GMX_USE_CUDA)
+if(GMX_USE_HIP)
     if(NOT GMX_CUDA_NB_SINGLE_COMPILATION_UNIT)
         set(NBNXN_CUDA_KERNEL_SOURCES
                 nbnxn_cuda_kernel_F_noprune.cu
