with or without hipcc link settings

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -186,12 +186,16 @@ foreach(hip_file ${LIBGROMACS_SOURCES})
   endif()
 endforeach()
          message(status "I'm here")
-         set(MY_HIPCC_OPTIONS)
-         set(MY_HCC_OPTIONS)
-         set(MY_NVCC_OPTIONS)
-
+         set(MY_HIPCC_OPTIONS "-fPIC  -fno-gpu-rdc")
+         set(MY_HCC_OPTIONS "-fPIC -fno-gpu-rdc")
+     #     set(MY_HIPCC_OPTIONS)
+     #     set(MY_HCC_OPTIONS)
+          set(MY_NVCC_OPTIONS)
+     #    set(CMAKE_HIP_CREATE_SHARED_LIBRARY "/opt/rocm/bin/hipcc <CMAKE_SHARED_LIBRARY_CXX_FLAGS>  ${CMAKE_CXX_FLAGS}  <LINK_FLAGS>  <CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS> <OBJECTS> <LINK_LIBRARIES>  -o <TARGET> ")
          hip_add_library(libgromacs ${LIBGROMACS_SOURCES} HIPCC_OPTIONS ${MY_HIPCC_OPTIONS} HCC_OPTIONS ${MY_HCC_OPTIONS} NVCC_OPTIONS ${MY_NVCC_OPTIONS})
-     #    target_link_libraries(libgromacs PRIVATE ${hip_target} )
+     #    set_target_properties(libgromacs PROPERTIES LINKER_LANGUAGE HIP)
+         
+         target_link_libraries(libgromacs PRIVATE ${hip_target} )
     else()
         add_library(libgromacs ${LIBGROMACS_SOURCES})
     endif()
