--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -186,8 +186,8 @@ foreach(hip_file ${LIBGROMACS_SOURCES})
   endif()
 endforeach()
          message(status "I'm here")
-         set(MY_HIPCC_OPTIONS "-fPIC  -fno-gpu-rdc")
-         set(MY_HCC_OPTIONS "-fPIC -fno-gpu-rdc")
+         set(MY_HIPCC_OPTIONS "-fPIC  -fno-gpu-rdc -DHIP_ENABLE_PRINTF=1")
+         set(MY_HCC_OPTIONS "-fPIC -fno-gpu-rdc -DHIP_ENABLE_PRINTF=1")
 #          set(MY_HIPCC_OPTIONS)
 #          set(MY_HCC_OPTIONS)
           set(MY_NVCC_OPTIONS)
